# TrainingProject

./: CMakeLists.txt
Enissay/: Item.h  Main.cpp  Main.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerType.h  main.cpp  main.h  player.cpp  player.h  playermanager.cpp  playermanager.h
